# chainlit-playground

./: .env.example  Dockerfile  README.md  compose.yml  output.txt  pyproject.toml  requirements.txt  test.json
.chainlit/: config.toml
configs/: index.py
prisma/: dev.db  schema.prisma
scripts/: dev.py  seed_vector.py  seed_vector_location.py
src/: app.py
src/agents/jcb_agent/: index.py  recommendation.py  researcher.py  router.py  state.py
src/agents/tools/: search_promotion.py  search_promotion_v1.py  search_promotions_v3.py  search_promotionsv2.py
tests/jcb_agent/: test_jcb_agent.py
